# clinica-pet

./: .flake8  .gitignore  LICENSE  README.md  anotacoes.txt  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: git-action.yml
clinica/: settings.py  urls.py
clinica/base/: apps.py  decorators.py  models.py  tests.py  urls.py  views.py
clinica/base/entidades/: cliente.py  consulta.py  endereco.py
clinica/base/forms/: cliente_forms.py  consulta_forms.py  endereco_forms.py  funcionario_forms.py  pet_forms.py
clinica/base/migrations/: 0001_initial.py  0002_alter_enderecocliente_cep_alter_funcionario_cargo.py
clinica/base/services/: cliente_service.py  consulta_service.py  endereco_service.py  funcionario_service.py
clinica/base/templates/: base.html
clinica/base/templates/clientes/: confirma_exclusao.html  form_cliente.html  lista_cliente.html  lista_clientes.html
clinica/base/templates/consultas/: consulta_email.html  form_consulta.html  lista_consulta.html
clinica/base/templates/funcionarios/: form_funcionario.html  lista_funcionarios.html
clinica/base/templates/pets/: form_pet.html  lista_pet.html
clinica/base/templatetags/: meus_filtros.py
clinica/base/tests/: test_cliente_service.py  test_cliente_views.py  test_entidades.py  test_home_views.py  test_meus_filtros.py  tests_models.py
clinica/base/views/: autenticacao_views.py  cliente_views.py  consulta_views.py  funcionario_views.py  pet_views.py
clinica/tests/: test_utils.py
