[project]
name = "clinica-pet"
version = "0.1.0"
description = "Sistema para gestão de clinicas pets."
authors = [
    {name = "Josemar Brito",email = "estudos.josemarbrito@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
