[project]
name = "clinica-pet"
version = "0.1.0"
description = "Sistema para gestão de clinicas pets."
authors = [
    {name = "Josemar Brito",email = "estudos.josemarbrito@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.6,<6.0.0)"
]
[tool.poetry.dependencies]
python = ">=3.11,<3.14"
django = "5.2.6,<6.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "clinica.settings"
python_files = ["test*.py", "*_test.py"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"