[project]
name = "clinica-pet"
version = "0.1.0"
description = "Sistema para gestão de clinicas pets."
authors = [
    {name = "Josemar Brito",email = "estudos.josemarbrito@gmail.com"}
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "django-adminlte2 (>=0.4.3,<0.5.0)",
    "mysqlclient (>=2.2.7,<3.0.0)"
]

# Use Poetry only for dependency management; do not attempt to build/install this project as a package.
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"
coverage = "^7.10.6"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "clinica.settings"
python_files = ["test*.py", "*_test.py"]


